--- a/content/blog/cs501.md
+++ b/content/blog/cs501.md
@@ -29,7 +29,7 @@ The rest of this blog is organized as follows:
 
 ## Background
 
-### What TAs do (at UCSB CS)
+### What TAs Do (at UCSB CS)
 
 Teaching assistants are graduate students (MS or PhD) who support the instructional mission of our undergraduate courses. In the CS department, courses typically have high enrollment with only one primary instructor. Because one-on-one interaction with the professor is a limited resource, TAs serve as the primary contact point between the students and the instructional team. Moreover, due to the high student-to-instructor ratio at UCSB, TAs often bear a significant portion of the teaching load.
 ![Student-to-Instructor Ratio](https://i.imgur.com/fWPA4pG.png)
@@ -61,7 +61,7 @@ CS 501 is just one pillar of the broader TA training program at UCSB CS, which c
 By moving through this cycle (**teach → feedback → reflect → improve**) we hope to encourage [metacognition](https://tll.mit.edu/teaching-resources/how-people-learn/metacognition/), helping TAs grow as educators long after the course ends.
 
 
-### Who is taking CS 501?
+### Who Took CS 501?
 
 Before diving into the redesign, it helps to understand the audience. Interestingly, CS 501 is mostly taken by students who are not *yet* TAs. This Fall, of the 45 students enrolled, only 11 held a concurrent TA position.
 
@@ -91,7 +91,7 @@ A quick note on word choice to avoid confusion:
 * **Students:** The undergraduates who are taught by the trainees in labs and discussion sections.
 
 
-### Principle 1: Respecting People’s Time
+### Respecting People’s Time
 
 You may be surprised that such an obvious thing is my first principle, but I sensed this was where some of the frustration with previous iterations of CS 501 originated. Most trainees are incredibly busy, balancing heavy schoolwork (for senior BS or MS students) or competing research responsibilities (for junior PhD students).
 
@@ -104,7 +104,7 @@ My fix was simple:
 
 
 
-### Principle 2: Structure Matters
+### Structure Matters
 
 When starting out as a fresh TA, I found classroom instruction to be the most daunting task. How was I going to fill an entire hour by just talking? Where do I even start to plan my instruction? Since the majority of CS 501 is about training people for the classroom, I was probably not alone in feeling lost as a new TA.
 
@@ -127,7 +127,7 @@ I drew a lot of inspiration from the wonderful [Pillars of Teaching Assistantshi
 
 
 
-### Principle 3: Show, Don’t Just Tell
+### Show, Don’t Just Tell
 
 A key choice I made when designing these lessons was to incorporate **modeling**. This means showing how instructional practices actually look in a real classroom setting rather than just talking about them.
 
@@ -160,7 +160,7 @@ Since autograders are just programs, a lab format seemed like a perfect way to t
 
 
 
-### Principle 4: More Practice, More Feedback
+### More Practice, More Feedback
 
 Previous iterations of CS 501 had some great assignments to help trainees practice and observe teaching. These included teaching observations, where non-TA trainees watched TA trainees lead their sections, and micro-teaching demos, where each non-TA trainee prepared and delivered a mini-lesson to the class. I largely kept these assignments as they were, but I reworked the implementation to address some practical issues that limited their effectiveness in the past.
 
@@ -173,7 +173,7 @@ The next issue involved the micro-teaching demos. These are essential for non-TA
 This time, because the core content of the course was compressed into the first five weeks, we had Weeks 6 through 10 completely free. Since the enrollment was lower this year (around 45 students compared to 60 in previous years), I was able to organize smaller demo sessions. In each class from Weeks 6 to 10, a small group of six trainees would deliver a seven-minute demo. The rest of us listened intently and wrote down our comments. I then collected, aggregated, and sent the feedback back to each presenter.
 
 
-### Principle 5: Promoting Metacognition
+### Promoting Metacognition
 
 The second part of the equation that closes the loop is actively parsing feedback and, hopefully, integrating it into our future teaching. I feel this is especially fruitful for trainees who are concurrently TAs. Since they are delivering classroom instruction every week, they are already in a cycle of receiving implicit feedback from their students.
 
@@ -184,7 +184,7 @@ I debated whether to keep the TPS assignment, but in the end, I decided to keep 
 In the past, the course taught trainees how to draft a TPS using an assortment of "do’s and don’ts." I revised this content to include more structured worksheet activities, which I adapted from a UCSB Office of Teaching and Learning workshop. These activities give the class plenty of time to reflect on their own teaching and learning experiences. They then distill these reflections into a small number of core principles. I provide a template to help them organize these reflections into clearly structured writing. Throughout this process, the emphasis is on the reflection itself rather than the quality of the prose. After all, these trainees aren't yet writing statements for a faculty search committee.
 
 
-### Principle 6: Community
+### Community
 
 Although not an official goal of CS 501, I thought building a community for trainees would be really nice. Half of them are first-year PhD students, and CS 501 is likely the only course where they get to meet every single one of their fellow classmates. It is a great place to start building connections with other PhD and MS students whom they might meet again in future courses. Plus, having a support network is crucial for surviving CS grad school, especially considering how [challenging](https://research.wmz.ninja/projects/phd/index.html) the journey can be.
 
