--- a/content/blog/cs501.md
+++ b/content/blog/cs501.md
@@ -1,5 +1,5 @@
 +++
-title = "Revamping the TA Training Course for UCSB CS"
+title = "Redesigning the TA Training Course for UCSB CS"
 date = "2026-01-01"
 # description = "Sample article showcasing basic Markdown syntax and formatting for HTML elements."
 tags = [
@@ -11,7 +11,7 @@ tags = [
 
 ## Introduction
 
-Early in the summer, I was offered the Lead TA position for the CS department for the 2025-2026 academic year. One of the main responsibilities is running the department’s TA training program, which primarily features teaching **CS 501 (Techniques of Computer Science Teaching)**. This is a required course for all new graduate students in their first quarter, regardless of whether they have secured a concurrent TA position. Although I have been a TA many times, teaching an entire course on *how* to teach CS felt like a daunting task. It seemed to require a different skill set and knowledge base than what I had developed in the classroom as a TA.
+Early in the summer, I was offered the [Lead TA](https://otl.ucsb.edu/graduate-students/ta-certificate-programs/lead-ta-institute) position for the CS department for the 2025-2026 academic year. One of the main responsibilities is running the department’s TA training program, which primarily features teaching **CS 501 (Techniques of Computer Science Teaching)**. This is a required course for all new graduate students in their first quarter, regardless of whether they have secured a concurrent TA position. Although I have been a TA many times, teaching an entire course on *how* to teach CS felt like a daunting task. It seemed to require a different skill set and knowledge base than what I had developed in the classroom as a TA.
 
 Nevertheless, I took on the challenge because I saw an opportunity to evolve the existing program. When I started as a PhD student four years ago, I was enrolled in CS 501 myself. Yet, I still remember the dread and anxiety of standing in front of a classroom of 30 students for the first time. I remember the sleepless nights before my instruction days, lying in bed involuntarily rehearsing every sentence I planned to say.
 
@@ -31,10 +31,10 @@ The rest of this blog is organized as follows:
 
 ### What TAs Do (at UCSB CS)
 
-Teaching assistants are graduate students (MS or PhD) who support the instructional mission of our undergraduate courses. In the CS department, courses typically have high enrollment with only one primary instructor. Because one-on-one interaction with the professor is a limited resource, TAs serve as the primary contact point between the students and the instructional team. Moreover, due to the high student-to-instructor ratio at UCSB, TAs often bear a significant portion of the teaching load.
+At UCSB, teaching assistants are graduate students (MS or PhD) who support the instructional mission of our undergraduate courses. In the CS department, courses typically have high enrollment with only one primary instructor. 
 ![Student-to-Instructor Ratio](https://i.imgur.com/fWPA4pG.png)
 
-The following diagram, provided by the UCSB Office of Teaching and Learning, shows a detailed breakdown of these responsibilities:
+Because one-on-one interaction with the professor is a limited resource, TAs serve as the primary contact point between the students and the instructional team. Moreover, due to the high student-to-instructor ratio at UCSB, TAs often bear a significant portion of the teaching load. The following diagram, provided by the UCSB Office of Teaching and Learning, shows a detailed breakdown of these responsibilities:
 ![TA Responsibilities](https://i.imgur.com/ExWApbr.png)
 
 I want to focus on the following five tasks, which I believe are the most critical for CS TAs:
@@ -144,11 +144,24 @@ I then immediately contrasted that with a slide showing measurable LOs that focu
 
 The class on active learning introduces a range of activities that trainees can choose from. However, there is a real chance a trainee has not seen many of them, since CS courses are often lecture-heavy with little student interaction. I explicitly incorporated different types of active learning activities many times in class to help trainees get a feel for how they can be run.
 
-For example, a key outcome of CS 501 is for trainees to be aware of university resources and policies that support student learning and their own well-being. In previous iterations, these resources were taught through slide presentations scattered across several classes. This time, I consolidated the most important policies and resources into one 50-minute class. To make this more engaging, I devised several imaginary scenarios that might arise in a student-TA interaction.
+For example, A key learning objective of CS 501 is for trainees to be aware of university resources and policies that support student learning and their own well-being. In previous iterations, these resources were taught through slide presentations scattered across several classes. This time, I consolidated the most important policies and resources into one 50-minute class. To make this more engaging, I devised [several imaginary scenarios](https://junrui-liu.github.io/cs501/modules/week4.html#group-scenarios) that might arise in a student-TA interaction. Instead of just lecturing, I asked the class to gather into groups of three or four to discuss how they would approach each scenario. Through these discussions, trainees could draw on their prior knowledge of various UCSB offices and policies, while I filled in any gaps afterward. This demonstrated how active learning can be used even for topics that seem dry or policy-heavy.
 
-Instead of just lecturing, I asked the class to gather into groups of three or four to discuss how they would approach each scenario. Through these discussions, trainees could draw on their prior knowledge of various UCSB offices. Since many students in the class are BS/MS students at UCSB, they had often heard of or utilized these resources before. I positioned myself as a facilitator for the discussion, occasionally highlighting policies that students were less likely to be aware of, such as the university’s distressed student protocol.
+Here is one of the scenarios we discussed:
+> **Scenario 3**
+> 
+> During the university’s campus visit weekend, the CS department hosts a casual coffee hour for visiting families. You strike up a great conversation with a person who mentions she’s a UCSB alumna now working as a network engineer at Arista Networks. Since you’re currently a TA for CS 176A (Introduction to Computer Communication Networks), you bond over shared interests in networking technologies. 
+> 
+> As the conversation continues, you realize her son is a student in your section. He’s highly engaged in class and doing well. Which of the following information would it be ok to share with the parent? 
+> 
+> ☑️ That her son is taking CS 176A and you are his TA
+> 
+> ☑️ That her son is doing well in your section
+> 
+> ☑️ That her son got a perfect score on the last quiz
 
-Other activities I modeled include think-pair-share sessions, where trainees revised their drafted LOs with their neighbors, and worksheets for drafting teaching philosophy statements.
+Although domestic trainees are likely already aware of [FERPA](https://en.wikipedia.org/wiki/Family_Educational_Rights_and_Privacy_Act), the policy may seem quite bizzare to international trainees who come from different educational cultures. The group discussion format allowed trainees to share their perspectives and clarify misunderstandings collaboratively. For other resources any policies, as many students in the class are BS/MS students at UCSB, they had often heard of or utilized these resources before. So I positioned myself as a facilitator for the discussion, occasionally highlighting policies that students were less likely to be aware of, such as the university’s distressed student protocol.
+
+Other activities I modeled include [think-pair-share](https://en.wikipedia.org/wiki/Think-pair-share), where trainees revised their drafted LOs with their neighbors, and worksheets for drafting teaching philosophy statements.
 
 #### Modeling lab instruction
 
@@ -160,26 +173,26 @@ Since autograders are just programs, a lab format seemed like a perfect way to t
 
 
 
-### More Practice, More Feedback
+### Better Practice, More Feedback
 
-Previous iterations of CS 501 had some great assignments to help trainees practice and observe teaching. These included teaching observations, where non-TA trainees watched TA trainees lead their sections, and micro-teaching demos, where each non-TA trainee prepared and delivered a mini-lesson to the class. I largely kept these assignments as they were, but I reworked the implementation to address some practical issues that limited their effectiveness in the past.
+Previous iterations of CS 501 had some great assignments to help trainees practice and observe teaching. These included [teaching observations](https://cteresources.bc.edu/documentation/teaching-observations/approaches-to-teaching-observations/), where non-TA trainees watched TA trainees lead their sections, and [micro-teaching sessions](https://en.wikipedia.org/wiki/Microteaching), where each non-TA trainee prepared and delivered a mini-lesson to a small group of peers. I largely kept these assignments as they were, but I reworked the implementation to address some practical issues that limited their effectiveness in the past.
 
-To start, for both assignments, trainees used to rate each other’s teaching with numeric scores across several metrics. They would use a non-anonymous form and hand it back to the person being observed immediately afterward. The template was structured in a way that made written feedback feel like an afterthought. You can probably imagine that it isn't very helpful to be rated a 3/5 on "question answering" without further comments. Similarly, trainees often received a 5/5 on every metric because the observer was a friend and didn't want to make things awkward.
+To start, for both assignments, trainees [used to rate each other’s teaching with numeric scores across several metrics](https://drive.google.com/file/d/14jGKi90MEXlBjWTz0XZeORU2rs19Nhrr/view). They would use a non-anonymous form and hand it back to the person being observed immediately afterward. The template was structured in a way that made written feedback feel like an afterthought. You can probably imagine that it isn't very helpful to be rated a 3/5 on "question answering" without further comments. Similarly, trainees often received a 5/5 on every metric because the observer was a friend and didn't want to make things awkward.
 
-To remedy this, I replaced the old form with a new template that prioritizes written feedback. This template was designed by Lisa Berry and used in her Grad 210 course, where we did similar teaching demos. When I took her class, I found this format to be very effective at generating constructive feedback. After using it this quarter, I can say it was a success. The quality of the comments was much higher, and trainees seemed to take the feedback more seriously.
+To remedy this, I replaced the old form with [a new template that prioritizes written feedback](https://docs.google.com/document/d/14hyysr2nPwQHWHIm_jI6JR4pu8awx0g14399sLeZInc/edit?tab=t.0). This template was designed by Lisa Berry and used in her Grad 210 course, where we did similar micro-teaching demos. When I took her class, I found this format to be very effective at generating constructive feedback. After using it this quarter, I can say it was a success. The quality of the comments was much higher, and trainees seemed to take the feedback more seriously.
 
-The next issue involved the micro-teaching demos. These are essential for non-TA trainees because they are often the only way to practice what they learned and get feedback. Previously, all demos happened during a single class period where trainees gathered into small groups of three to five. The presentation medium was very constrained. No slideshows were allowed because there was only one projector in the room, and only a few groups had access to a chalkboard. Furthermore, it was impossible for the instructor to provide substantial individual feedback because they could only listen to one group at a time.
+The next issue involved the [micro-teaching demos](https://junrui-liu.github.io/cs501/assignments/micro-teaching-demo.html). These are essential for non-TA trainees because they are often the only way to practice what they learned and get feedback. Previously, all demos happened during a single class period where trainees gathered into small groups of three to five. The presentation medium was very constrained. No slideshows were allowed because there was only one projector in the room, and only a few groups had access to a chalkboard. Furthermore, it was impossible for the instructor to provide substantial individual feedback because they could only listen to one group at a time.
 
 This time, because the core content of the course was compressed into the first five weeks, we had Weeks 6 through 10 completely free. Since the enrollment was lower this year (around 45 students compared to 60 in previous years), I was able to organize smaller demo sessions. In each class from Weeks 6 to 10, a small group of six trainees would deliver a seven-minute demo. The rest of us listened intently and wrote down our comments. I then collected, aggregated, and sent the feedback back to each presenter.
 
 
-### Promoting Metacognition
+### Metacognition
 
 The second part of the equation that closes the loop is actively parsing feedback and, hopefully, integrating it into our future teaching. I feel this is especially fruitful for trainees who are concurrently TAs. Since they are delivering classroom instruction every week, they are already in a cycle of receiving implicit feedback from their students.
 
-I think all they need is a little nudge to intentionally look back on their experience periodically. To provide this, I added a weekly journal assignment. I actually borrowed this idea from a fellow Lead TA during the [Lead TA Institute](https://otl.ucsb.edu/graduate-students/ta-certificate-programs/lead-ta-institute). In these journals, TAs document the time spent on teaching activities and reflect on their experiences from the past week using a few simple prompts. Practically, these journals also serve as a reservoir of ideas for the teaching philosophy statement (TPS) assignment, where they critically reflect on their personal approach to teaching and learning.
+I think all they need is a little nudge to intentionally look back on their experience periodically. To provide this, I added a [weekly journal assignment](https://junrui-liu.github.io/cs501/assignments/teaching-journal.html), an idea that I borrowed from a fellow Lead TA during the [Lead TA Institute](https://otl.ucsb.edu/graduate-students/ta-certificate-programs/lead-ta-institute). In these journals, TAs document the time spent on teaching activities and reflect on their experiences from the past week using a few simple prompts. Practically, these journals also serve as a reservoir of ideas for the teaching philosophy statement (TPS) assignment, where they critically reflect on their personal approach to teaching and learning.
 
-I debated whether to keep the TPS assignment, but in the end, I decided to keep it. As I recently completed a [draft of my own TPS](/pdfs/junrui-liu-teaching-statement.pdf) for academic jobs, it occurred to me just how much of my current philosophy originated from the first draft I wrote four years ago for CS 501. Even though I had very little teaching experience at that time, it made me reflect on my beliefs about learning. (I now understand these beliefs are rooted in the [constructivism](https://en.wikipedia.org/wiki/Constructivism_(philosophy_of_education)) paradigm, and they have continued to influence my pedagogy ever since.
+I debated whether to keep the TPS assignment, but in the end, I [decided to keep it](https://junrui-liu.github.io/cs501/assignments/teaching-philosophy.html). As I recently completed a [draft of my own TPS](/pdfs/junrui-liu-teaching-statement.pdf) for academic jobs, it occurred to me just how much of my current philosophy originated from the first draft I wrote four years ago for CS 501. Even though I had very little teaching experience at that time, it made me reflect on my beliefs about learning. (I now understand these beliefs are rooted in the [constructivism](https://en.wikipedia.org/wiki/Constructivism_(philosophy_of_education)) paradigm, and they have continued to influence my pedagogy ever since.)
 
 In the past, the course taught trainees how to draft a TPS using an assortment of "do’s and don’ts." I revised this content to include more structured worksheet activities, which I adapted from a UCSB Office of Teaching and Learning workshop. These activities give the class plenty of time to reflect on their own teaching and learning experiences. They then distill these reflections into a small number of core principles. I provide a template to help them organize these reflections into clearly structured writing. Throughout this process, the emphasis is on the reflection itself rather than the quality of the prose. After all, these trainees aren't yet writing statements for a faculty search committee.
 
@@ -206,17 +219,17 @@ I am also heartened to learn that "the environment made everything much less int
 
 I want to end this blog with a list of things I wish I had done differently. This is intended for future CS Lead TAs, should they choose to base their instruction on this version.
 
-### Teaching Demos
+### Micro-Teaching
 
-This year, CS 501 saw a decrease in enrollment, from over 60 trainees in previous years to 45. This made our current format of teaching demos possible, where students sign up for one class between Weeks 6 and 10 to give a short presentation. However, even with the smaller class size, the capacity of this format was stretched to its limit.
+This year, CS 501 saw a decrease in enrollment, from over 60 trainees in previous years to 45. This made our current format of micro-teaching demos possible, where students sign up for one class between Weeks 6 and 10 to give a short presentation. However, even with the smaller class size, the capacity of this format was stretched to its limit. Some students ended up having to record their presentations and perform peer evaluations asynchronously. For the in-person demos, fitting seven presentations into 50 minutes left very little time for trainees to incorporate substantial activities, like worksheets, or to handle questions from the audience. Some demos also had to be cut short. 
 
-Some students ended up having to record their presentations and perform peer evaluations asynchronously. For the in-person demos, fitting seven presentations into 50 minutes left very little time for trainees to incorporate substantial activities, like worksheets, or to handle questions from the audience. Some demos also had to be cut short. In the future, in addition to using regular class meetings, we could move some demos to non-class times, such as during finals week.
+In the future, in addition to using regular class meetings, we could move some demos to non-class times, such as during finals week.
 
 ### TA-Student Interaction
 
 Most of the current materials revolve around classroom instruction. However, TAs spend an equal amount of time, and often more, interacting with students outside of class in office hours, on Q&A forums, and through emails. A range of challenging issues arise in these situations, but they are diverse enough that we don’t yet have a uniform theory for teaching trainees how to handle them.
 
-For example, when [I ran the workshop on leading computer-based labs]({{< relref "tao25.md" >}}), many participants voiced concerns about being unable to help students resolve complex programming issues during office hours. In my experience, fielding questions in office hours is very much an art. In future iterations of 501, it would be great to address these situations in class, perhaps by providing guiding principles or at least a platform for trainees to anticipate issues and collectively brainstorm strategies.
+For example, when I ran the workshop on leading computer-based labs, many participants [voiced concerns]({{< relref "tao25.md#biggest-worries" >}}) about being unable to help students resolve complex programming issues during office hours). In my experience, fielding questions in office hours is very much an art. In future iterations of 501, it would be great to address these situations in class, perhaps by providing guiding principles or at least a platform for trainees to anticipate issues and collectively brainstorm strategies.
 
 ### Manual Grading
 
